Compute typed resource relational fields
